# QTradeX-Algo-Trading-SDK

./: .env.example  .gitignore  QUICKSTART.md  README.md  install_log.txt  pyproject.toml  test_aion_verification.py  test_debug_zigzag.py  test_ema_debug.py  verify_indicators.py  verify_metrics.py  verify_roi.py
docs/: aion.md  ajuste-scalp.md  ccxt_docs.md  round_trip_reporting_guide.md
qtradex/: __init__.py
qtradex/bitshares_pure/: __init__.py  rpc.py  signing.py
qtradex/common/: json_ipc.py  utilities.py
qtradex/core/: Papertrade_fluxo.md  backtest.py  backtest_backup.py  dispatch.py  filltest.py  live.py  papertrade.py  quant.py  quant_backup.py  tune_manager.py
qtradex/indicators/: fitness.py  fitness_backup.py  qi.py  tulipy_wrapped.py  utilities.py
qtradex/optimizers/: aion.md  aion.py  aion_backup.py  ipse.py  lsga.py  qpso.py  utilities.py
qtradex/private/: bitshares_exchange.py  wallet.py
qtradex/public/: data.py  klines_ccxt.py
strategies/: ZigZagATR.py  ZigZagFractal.py  ZigZagPivots.py  __init__.py  extinction_event.py  renko.py  renko_pro.py  renko_scalp.py  strategy_base.py
strategies/tunes/: ReversalHunter_13.json  ZigZagATR_5.json  ZigZagFractal_4.json  ZigZagFractal_5.json  ZigZagMomentum_6.json  ZigZagPivots_7.json  ZigZag_NR_6.json  cthulhu_13.json  extinction_event_15.json  renko_7.json  renko_pro_6.json  renko_scalp_6.json
